added more pages and secured some routes
